resultat med 3 if regler

--- a/undervisningsopgaver/01-js-basic/01-areal.html
+++ b/undervisningsopgaver/01-js-basic/01-areal.html
@@ -14,18 +14,15 @@
 
 
 
-
-
-
-
-
     <script>
         let længde = 3;
         let bredde = 5;
 
         let areal = længde * bredde;
 
-        let resultat = "længden er " + længde + " meter og bredde er " + bredde + " meter. Arealet er " + areal + " kvadratmeter";
+        //let resultat = "længden er " + længde + " meter og bredde er " + bredde + " meter. Arealet er " + areal + " kvadratmeter";
+
+        let resultat = `længden er ${længde} meter og bredde er ${bredde} meter. Arealet er ${areal} kvadratmeter`;
         console.log(resultat);
     </script>
 </body></html>
