--- a/undervisningsopgaver/01-js-basic/02-arealTest.html
+++ b/undervisningsopgaver/01-js-basic/02-arealTest.html
@@ -26,7 +26,7 @@
 
         }
         // Er arealet mellem 100 og 200, skal der stå: Arealet er ok
-        if (areal >= 100 && areal > 200) {
+        if (areal >= 100 && areal < 200) {
             resultat = "Arealet er ok";
 
         }
@@ -36,5 +36,8 @@
         }
 
         console.log(resultat);
+
     </script>
-</body></html>
+</body>
+
+</html>
