--- a/undervisningsopgaver/01-js-basic/07-godmorgen.html
+++ b/undervisningsopgaver/01-js-basic/07-godmorgen.html
@@ -26,8 +26,11 @@
             console.log("Godaften");
         }
         if (today >= 18 && today <= 24) {
-            console.log("Godnat");
+            console.log("Godnat"
+                s);
         }
-    </script>
-</body></html>
 
+    </script>
+</body>
+
+</html>
