--- a/undervisningsopgaver/01-js-basic/05-arealFunktion.html
+++ b/undervisningsopgaver/01-js-basic/05-arealFunktion.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="da">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
@@ -24,26 +22,22 @@
             let længde = document.querySelector("#længde").value;
             let bredde = document.querySelector("#bredde").value;
 
-            //  let areal = længde * bredde;
-
-
             let resultat = `Arealet er ${areal(længde, bredde)} kvadratmeter`;
-            console.log(resultat);
+
+            let udregning = længde * bredde;
+
+            if (udregning <= 0) {
+                alert("hovsa");
+            } else {
+                console.log(resultat);
+            }
         }
 
         function areal(l, b) {
             return (l * b);
         }
-
-
-
-        /*
-         let længde = 3;
-         let bredde = 5;
-
-         let areal = længde * bredde;
-
-         let resultat = `længden er ${længde} meter og bredde er ${bredde} meter. Arealet er ${areal} kvadratmeter`;
-         console.log(resultat);*/
     </script>
+
+
+
 </body></html>
