07 lavet tilføjet ekstra style på transform og en opacity på .green

--- a/undervisningsopgaver/02-js-DOM/07-styling.html
+++ b/undervisningsopgaver/02-js-DOM/07-styling.html
@@ -15,6 +15,7 @@
             line-height: 100px;
             text-align: center;
             background-color: green;
+
         }
 
         .red {
@@ -25,7 +26,6 @@
             border-radius: 50%;
             background-color: red;
         }
-
     </style>
 
 
@@ -68,27 +68,26 @@
 
                 green.innerHTML = red.innerHTML;
                 red.innerHTML = greenstart;
-
-
             }
 
             function stop() {
                 green.removeEventListener("click", flyt);
-                green.style.transition = "1,5s";
+                green.style.transition = "1.5s";
                 green.style.backgroundColor = "red";
-                red.style.transition = "1,5s";
                 red.style.transform = "scale(0)";
+                green.style.opacity = "0.5";
 
-                /*Den er ikke færdig. DEn ligner videoens men den virker ikke. what to do???*/
+
 
             }
 
         }
 
+
+
+        /*   funktionerne skal helst ikke ligge inde i andre funktioner. men det var det der var lavet i videoen. så skal variablerne bare placeres anderledens*/
     </script>
-    <!--funktionerne skal helst ikke ligge inde i andre funktioner. men det var det der var lavet i videoen. så skal variablerne bare placeres anderledens-->
 
 
-</body>
 
-</html>
+</body></html>
