03-viselement rigtig tekst og billede puttet ind i de rigtige tags inde i article

--- a/undervisningsopgaver/02-js-DOM/07-styling.html
+++ b/undervisningsopgaver/02-js-DOM/07-styling.html
@@ -92,7 +92,7 @@
                 red.style.transform = "scale(0)";
                 green.style.opacity = "0.5";
                 green.style.height = "2rem";
-                info.classList.remove = ("green");
+                green.classList.remove = ("green");
 
 
 
