--- a/undervisningsopgaver/Babushka/popup/index.html
+++ b/undervisningsopgaver/Babushka/popup/index.html
@@ -25,12 +25,12 @@
     </header>
 
     <template>
-        <section>
+        <article>
             <div class="img_container"><img src="" alt=""></div>
             <h2 class="name"></h2>
             <p class="short"></p>
             <p class="price"></p>
-        </section>
+        </article>
     </template>
 
     <div class="list"></div>
@@ -40,9 +40,9 @@
             <button class="close">X</button>
             <div class="img_container"><img src="" alt=""></div>
             <div class="dish_txt">
-            <h2 class="name"></h2>
-            <p class="short"></p>
-            <p class="price"></p>
+                <h2 class="name"></h2>
+                <p class="short"></p>
+                <p class="price"></p>
             </div>
         </section>
     </div>
