--- a/undervisningsopgaver/Babushka/singleview/moreindex.html
+++ b/undervisningsopgaver/Babushka/singleview/moreindex.html
@@ -16,7 +16,7 @@
     <section id="view">
 
 
-        <div class="img_container"><img src="" alt=""></div>
+        <div class="img_container_more"><img src="" alt=""></div>
 
 
 
@@ -33,6 +33,4 @@
 
 
     <script src="morescript.js"></script>
-</body>
-
-</html>
+</body></html>
